@@ -26,23 +26,26 @@
 #include <stdarg.h>
 
 #include <smapi/msgapi.h>
+#include <smapi/prog.h>
 #include <fidoconf/fidoconf.h>
 #include <fidoconf/common.h>
 #include <fidoconf/xstr.h>
 
+#include <hptutil.h>
 #include <linkarea.h>
 #include <packarea.h>
 #include <purgearea.h>
 #include <sortarea.h>
-
-#define VER_MAJOR 1
-#define VER_MINOR 2
+#include <fixarea.h>
+#include <undelete.h>
 
 FILE *filesout;
 FILE *fileserr;
 
 char quiet = 0;
 char keepImportLog = 0;
+char typebase;
+char *basefilename;
 char *altImportLog = NULL;
 unsigned int debugLevel = 0;
 
@@ -53,6 +56,16 @@ void OutScreen(char *str, ...)
    va_start (par, str);
    if (quiet == 0) vfprintf(filesout, str, par);
    va_end (par);
+}
+
+void wait_d()
+{
+    char form[]="-\\|/";
+    static int i=0;
+    
+    if (i == 4) i = 0;
+    
+    OutScreen("\b%c", form[i++]);
 }
 
 void printVer()
@@ -73,6 +86,73 @@ void printVer()
 
 }
 
+void printFixHelp()
+{
+    printVer();
+    OutScreen("hptutil fix -s <%cpath%cand%cfilename>",
+			    PATH_DELIM, PATH_DELIM, PATH_DELIM);
+    OutScreen(" - fix squish filename\n");
+    OutScreen("hptutil fix -j <%cpath%cand%cfilename>",
+			    PATH_DELIM, PATH_DELIM, PATH_DELIM);
+    OutScreen(" - fix jam filename\n\n");
+    exit(0);
+}
+
+char FixBase(char c)
+{
+    switch (c) {
+	case 's':
+	    return (char)1;
+	    break;
+	case 'S':
+	    return (char)1;
+	case 'j':
+	    return (char)2;
+	case 'J':
+	    return (char)2;
+	default:
+	    fprintf(fileserr, "Don't known type base. See ...\n");
+	    printFixHelp();
+	    break;
+    }
+    return 0;
+}
+
+void parseFixLine(int argc, char *argv[], int *i, int *what)
+{
+    if (*i < argc-1) {
+	(*i)++;
+	if (stricmp(argv[*i], "-?") == 0) {
+	    printFixHelp();
+	}
+	if (argv[*i][0] != '-') {
+	    fprintf(fileserr, "Error options. See ...\n");
+	    printFixHelp();
+	} else if (stricmp(argv[*i], "-s") == 0 || stricmp(argv[*i], "-j") == 0) {
+	    // typebase
+	    // 0 - error
+	    // 1 - Squish
+	    // 2 - Jam
+	    typebase = FixBase(argv[*i][1]);
+	    if (*i < argc-1) {
+		(*i)++;
+		xstrcat(&basefilename, argv[*i]);
+		*what |= 0x10;
+		return;
+	    } else {
+		fprintf(fileserr, "Error options. See ...\n");
+		printFixHelp();
+	    }
+	} else {
+	    typebase = FixBase(argv[*i][1]);
+	    xstrcat(&basefilename, argv[*i]+2);
+	}
+    } else {
+	fprintf(fileserr, "Error options. See ...\n");
+	printFixHelp();
+    }
+}
+
 void processCommandLine(int argc, char *argv[], int *what)
 {
    int i = 0;
@@ -85,6 +165,7 @@ void processCommandLine(int argc, char *argv[], int *what)
       OutScreen("      hptutil link  - reply-link messages\n");
       OutScreen("      hptutil purge - purge areas\n");
       OutScreen("      hptutil pack  - pack areas\n");
+      OutScreen("      hptutil fix   - fix base (hptutil fix -? for more help)\n");
       OutScreen("      hptutil -k    - keep import.log file\n");
       OutScreen("      hptutil -q    - quiet mode (no screen output)\n");
       OutScreen("      hptutil -i <filename> - alternative import.log\n\n");
@@ -93,10 +174,12 @@ void processCommandLine(int argc, char *argv[], int *what)
 
    while (i < argc-1) {
       i++;
-      if (stricmp(argv[i], "purge") == 0) *what |= 1;
-      else if (stricmp(argv[i], "pack") == 0) *what |= 2;
-      else if (stricmp(argv[i], "sort") == 0) *what |= 4;
-      else if (stricmp(argv[i], "link") == 0) *what |= 8;
+      if (stricmp(argv[i], "purge") == 0) *what |= 0x01;
+      else if (stricmp(argv[i], "pack") == 0) *what |= 0x02;
+      else if (stricmp(argv[i], "sort") == 0) *what |= 0x04;
+      else if (stricmp(argv[i], "link") == 0) *what |= 0x08;
+      else if (stricmp(argv[i], "fix") == 0) parseFixLine(argc, argv, &i, what);
+      else if (stricmp(argv[i], "undel") == 0) *what |= 0x11;
       else if (stricmp(argv[i], "-k") == 0) keepImportLog = 1;
       else if (stricmp(argv[i], "-q") == 0) quiet = 1;
       else if (stricmp(argv[i], "-i") == 0) {
@@ -151,7 +234,7 @@ int main(int argc, char *argv[])
    processCommandLine(argc, argv, &what);
    
    printVer();
-
+   
    if (what) {
       setvar("module", "hptutil");
       config = readConfig(NULL);
@@ -160,11 +243,14 @@ int main(int argc, char *argv[])
             keepOrigImportLog = config->importlog;
 	    config->importlog = altImportLog;
 	 }
-	 
-         if (what & 4) sortAreas(config);
-         if (what & 8) linkAreas(config);
-         if (what & 1) purgeAreas(config);
-         if (what & 2) packAreas(config);
+	 if (what & 0x10) ret = fixArea(config);
+	 else if (what & 0x011) ret = undeleteMsgs(config, altImportLog);
+	 else {
+             if (what & 0x04) sortAreas(config);
+             if (what & 0x08) linkAreas(config);
+             if (what & 0x01) purgeAreas(config);
+             if (what & 0x02) packAreas(config);
+	 }
 	 
 	 if (altImportLog) {
 	    config->importlog = keepOrigImportLog;
